# simd_neuralnet

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  Makefile.in  README.md  activation.c  activation.h  backpropagation.c  configure  doxygen.cfg  example.c  example.py  exponential_builder.c  kerasmodel.py  loss.c  matrix_multiply.c  matrix_multiply.h  neuralnet.c  neuralnet.h  neuralnet.py  nnpython.py  npy_array.h  reference.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
callback/: Makefile  Makefile.in  configure  earlystopping.c  earlystopping.h  logger.c  logger.h  modelcheckpoint.c  modelcheckpoint.h
example/: how_to_load.c  how_to_load_npz.c  how_to_save.c
examples/: Makefile  Makefile.in  README.md  build.sh  configure  example_01.c  example_02.c  example_02b.c  example_03.c  general-trainer.c  mushroom_to_numpy.py  test_adagrad.c  test_rmsprop.c  test_sgd.c
initializer/: Makefile.in  README.md  create_random.c
neuralnet/: Makefile.am  Makefile.in  activation.c  activation.h  configure  configure.ac  evaluate.c  example.c  loss.c  loss.h  matrix_multiply.c  matrix_multiply.h  matrix_operations.c  metrics.c  metrics.h  neuralnet.c  neuralnet.h  optimizer.c  optimizer.h  optimizer_implementations.c  simd.h
npy_array/: .gitignore  .gitmodules  INSTALL.md  LICENSE  Makefile.in  README.md  configure  doxygen.cfg  npy_array.c  npy_array.h  npy_array.pc.in  npy_array_list.c  npy_array_list.h
optimizer/: Makefile.in  RMSprop.c  RMSprop.h  adagrad.c  adagrad.h  adam.c  adam.h  adamw.c  adamw.h  configure  evaluate.c  evaluate.h  evaluator.c  (+12 more)
(+98 files in other folders)
